--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <video id="video" class="none-display" width="320" height="240">
-            <source src="./media/nargas.mp4" type="video/mp4"> 
+        <video id="video" class="none-display">
+            <!-- <source src="./media/nargas.mp4" type="video/mp4">  -->
         </video>
 
         <div id="buttons" class="buttons">
