--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>E O NARGAS?</title>
+    <title>NARGUILA</title>
 </head>
 <body>
     <div class="wrapper">
         <video id="video" class="none-display">
-            <!-- <source src="./media/nargas.mp4" type="video/mp4">  -->
         </video>
 
         <div id="buttons" class="buttons">
